# zoekt-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_mcp_client.py
.github/workflows/: docker-build.yml
src/: config.py  exceptions.py  main.py  server.py
src/backends/: client.py  content_fetcher_protocol.py  fetcher.py  search_protocol.py
src/capabilities/: __init__.py  catalog.py  models.py
src/execution/: __init__.py  models.py  runner.py  safety.py
src/prompts/: prompts.yaml
src/runtime/: __init__.py  zoekt_tools.py
src/workflows/: __init__.py  manifest.yaml  renderers.py
src/workflows/scripts/: __init__.py  cross_repo_trace.py  file_context_reader.py  repo_discovery.py  symbol_definition.py  symbol_usage.py
tests/: test_cross_repo_trace_repo_selection.py  test_custom_workflow_safety.py  test_file_context_reader_limits.py  test_runner_arg_bounds.py  test_runtime_limits.py
